# otus-cpp.basic.hw

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  HW.md  Painter.cpp  Painter.hpp  Physics.cpp  Physics.hpp  Point.hpp  README.md  Velocity.hpp  World.cpp  World.hpp  argument.cpp  check_value.cpp  check_value.hpp  hello_world.cpp  high_scores.cpp  high_scores.hpp  main.cpp  main_game.cpp  move_me_out.cpp  random_value.cpp  random_value.hpp
black_box/: Application.cpp
